<resources>
    <string name="app_name">My News</string>

    <string name="go_back" >Go back</string>

    <!-- MAIN ACTIVITY STRINGS -->

    <string name="top_stories_tag"> TOP STORIES </string>
    <string name="most_popular_tag"> MOST POPULAR </string>
    <string name="business_tag"> BUSINESS </string>
    <string name="sports_tag"> SPORTS </string>

    <string name="delete_history_title">Deleting Read Articles\' History</string>
    <string name="delete_history_message">Are you sure you want to delete the Read Articles\' History?</string>
    <string name="delete_history_positive_button">Yes, I am sure</string>
    <string name="delete_history_negative_button">No</string>
    <string name="delete_history_toast">History has been deleted</string>

    <string name="main_search">Search</string>
    <string name="main_notifications">Notifications</string>
    <string name="main_delete_history">Delete History</string>
    <string name="main_help">Help</string>
    <string name="main_about">About</string>

    <!-- SEARCH QUERY TERM, CHECKBOXES AND DATE BUTTONS -->

    <string name="search_query_term"> Search Query Term </string>
    <string name="cb_arts">Arts</string>
    <string name="cb_business">Business</string>
    <string name="cb_entrepreneurs">Entrepreneurs</string>
    <string name="cb_politics">Politics</string>
    <string name="cb_sports">Sports</string>
    <string name="cb_travel">Travel</string>
    <string name="date_begin">Begin Date</string>
    <string name="date_end">End Date</string>
    <string name="date_begin_numbers">01/01/1900</string>
    <string name="date_end_numbers">26/03/2018</string>
    <string name="enable_notifications">Enable Notifications (once per day)"\       "</string>
    <string name="search_button">Search</string>

    <!-- NOTIFICATIONS ACTIVITY -->

    <string name="notification_is_created">A notification has been set at 10:00 am</string>


    <!-- NOTIFICATION -->

    <string name="main_notification_channel_name">Notification Channel Name</string>

    <string name="notification_app"> My News </string>
    <string name="notification_title">New Articles available!</string>
    <string name="notification_message">Tap to read Articles</string>
    <string name="notification_image_for_mynews">Image for MyNews</string>
    <string name="notification_no_available_articles">There are not available articles</string>
    <string name="notifications_not_enabled">Notifications are not enabled</string>

    <!-- FOUND ARTICLES LAYOUT -->

    <string name="found_articles_title">Found Articles</string>
    <string name="an_error_has_occurred">An error has occurred…</string>


    <!-- SEARCH ARTICLES ACTIVITY STRINGS -->

    <string name="search_articles_toast_choose_one_category"> You have to choose at least one category </string>
    <string name="search_articles_toast_end_and_begin_dates"> End Date must be after the Begin Date </string>
    <string name="search_articles_toast_end_and_today_dates"> End Date can\'t be after today </string>

    <string name="home_button_search_activity_content_description"> HomeButtonSearchActivity </string>


    <!-- ABOUT SECTION STRINGS-->

    <string name="developed_by">
        Developed by DF Development.
    </string>

    <!-- HELP SECTION STRINGS-->

    <string name="help_text_intro">
        "My News" uses the news published by the New York Times so you can be updated everyday
        at every time about what is happening in the world.
    </string>
    <string name="help_text_basics">
        You can move through the different sections using the different labels you can see under
        the main bar. In each section you can see a short summary of the different articles (and
        you can scroll down to see even more). If you click in any, the application will display
        the full article.
    </string>
    <string name="help_text_delete_history">
        The app stores all the articles you have read. You will see that the summary of the article
        changes to bold style when the article has been read. You can always delete the history
        using the "Delete History" button that will be shown if you press the menu button (three
        dots) on the main bar.
    </string>
    <string name="help_text_search">
        You can search specific articles according to different categories, search queries and
        dates. For that, press the "Search button" (the magnifying glass in the in the main bar)-
    </string>
    <string name="help_text_notifications">
        You can keep updated every day with new articles using the notifications functionality.
        To use it, click the "Notifications" button (displayed after tapping the 3 dots button in
        the main bar), choose the categories, introduce a search query if you'd like and switch
        the button on. The app will send you a notification every day with new articles.
    </string>


</resources>
