<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search_button"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/main_search" />

    <item
        android:id="@+id/menu_notifications_button"
        android:title="@string/main_notifications"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_delete_database"
        android:title="@string/main_delete_history"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_help_button"
        android:title="@string/main_help"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/menu_about_button"
        android:title="@string/main_about"
        app:showAsAction="never">
    </item>

</menu>