<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:paddingLeft="25dp"
    android:paddingTop="2dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/custom_notif_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
            android:contentDescription="@string/notification_image_for_mynews" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/notification_app"
            android:paddingTop="7dp"
            android:paddingLeft="5dp"/>
    </LinearLayout>



    <TextView
        android:id="@+id/custom_notif_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/notification_title" />

    <TextView
        android:id="@+id/custom_notif_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"
        android:text="@string/notification_message"
        android:padding="5dp"/>

</LinearLayout>